--- a/index.html
+++ b/index.html
@@ -2,46 +2,56 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>XPeppers - Your Agile Innovation Partner</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
-
   </head>
 
   <body class="index" id="page-top">
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand" href="#page-top">
+        <img src="img/logo.png" />
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
+        Navigation
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#clients">Clients</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="#blog">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#events">Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#culture">Culture</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#careers">Careers</a>
           </li>
         </ul>
       </div>
@@ -50,19 +60,45 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
         <div class="intro-text">
-          <span class="name">Start Bootstrap</span>
-          <hr class="star-light">
-          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+          <span class="name">Meet the Agile Innovation</span>
+          <span class="skills">
+            We are focused on Agile, DevOps and Cloud.<br />
+            We work with our customers to support them deliver better products.
+          </span>
+        </div>
+        <div class="intro-navigation">
+          <a href="#services">discover our services</a>
+          <a href="#services">checkout next events</a>
         </div>
       </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <!-- Latest Insights -->
+    <section id="insights">
       <div class="container">
-        <h2 class="text-center">Portfolio</h2>
+        <h2 class="text-center">Latest Insights</h2>
+        <div class="row">
+          <div class="col">
+            <hr>
+            Radar ?
+          </div>
+          <div class="col">
+            <hr>
+            Latest course ?
+          </div>
+          <div class="col">
+            <hr>
+            Conference were you can meet us ?
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Grid Section -->
+    <section id="clients">
+      <div class="container">
+        <h2 class="text-center">Clients and Partners</h2>
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
@@ -130,9 +166,9 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="success" id="services">
       <div class="container">
-        <h2 class="text-center">About</h2>
+        <h2 class="text-center">Services</h2>
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
@@ -152,9 +188,9 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="culture">
       <div class="container">
-        <h2 class="text-center">Contact Me</h2>
+        <h2 class="text-center">Culture</h2>
         <hr class="star-primary">
         <div class="row">
           <div class="col-lg-8 mx-auto">
