add latest insights section

--- a/index.html
+++ b/index.html
@@ -79,19 +79,34 @@
       <div class="container">
         <h2 class="text-center">Latest Insights</h2>
         <div class="row">
-          <div class="col">
-            <hr>
-            Radar ?
+          <div class="col insight">
+            <h1>The XPeppers Radar</h1>
+            <div class="banner radar"></div>
+            <p>
+              Subscribe to our newsletter! Receive <strong>handpicked resources by the XPeppers team</strong> about Agile, Software Development and Cloud <strong>twice a month</strong>. We only send <strong>our favourite contents</strong>: the ones we think you will really enjoy. We will also keep you up to date about our workshops and open postitions.
+            </p>
           </div>
-          <div class="col">
-            <hr>
-            Latest course ?
+          <div class="col insight">
+            <h1>Learn Clean Code and TDD</h1>
+            <div class="banner courses"></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac nunc vitae justo cursus ullamcorper quis tempor ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt vulputate ligula non vehicula. Sed et ex vitae felis imperdiet dictum vitae et tortor.
+            </p>
           </div>
-          <div class="col">
-            <hr>
-            Conference were you can meet us ?
+          <div class="col insight">
+            <h1>Meet us at next Agile@Work</h1>
+            <div class="banner conferences"></div>
+            <p>
+              A <strong>full-day conference</strong> about real world experiences on applied <strong>Agile methodologies</strong>, <strong>DevOps</strong> principles and <strong>Cloud</strong> infrastructure transformations. You will attend practical <strong>workshops</strong>, <strong>training</strong> sessions and<strong> talks of case studies</strong>.
+            </p>
           </div>
         </div>
+        <div class="row">
+           <div class="col text-center"><a class="continue-to-insight" href="#">Subscribe to XPeppers Radar</a></div>
+           <div class="col text-center"><a class="continue-to-insight" href="#">Discover our courses</a></div>
+           <div class="col text-center"><a class="continue-to-insight" href="#">Join the Agile@Work Conference</a></div>
+        </div>
+        <hr />
       </div>
     </section>
 
